Wed Jan  3 18:25:25 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* ignore.c (ign_default): Change CVS* to CVS CVS.adm.  CVS* is too
	broad, especially in a case-insensitive filesystem.

	* Makefile.in (cvsbug): version.c is in srcdir.

Wed Jan  3 17:30:45 1996  Phi-Long Tran  <ptran@autodesk.com>

	* modules.c (do_module): Honor error_use_protocol in printing trace.
	* server.c (server_register): Move check for options NULL to above
	printing of the trace.

Wed Jan  3 01:19:53 1996  Mark Immel <immel@centerline.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (checkout_file): Do not resurrect file on join if it
	doesn't contain the revisions we are joining.  Probably not a
	perfect test, but should be an improvement.
	* sanity.sh (death): New death-file4-* tests, for bug fixed above.

Wed Jan  3 01:19:53 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c, admin.c, checkout.c, client.c, commit.c, diff.c, edit.c,
	history.c, import.c, log.c, patch.c, release.c, remove.c, rtag.c,
	status.c, tag.c, update.c, watch.c: In calling send_to_server,
	pass \012 not \n.  On the Mac \n is CR, not LF, and we want to
	send LF.  I didn't try to deal with whether files in CVSADM should
	contain CR or LF--in fact there is some code in client.c which
	reads \n from CVSADM files and passes it to send_to_server; it
	needs to be cleaned up one way or the other.

	* entries.c (Entries_Open): Don't try to close fpin twice.

	* client.c (update_entries): Fix typo ("strlen (filename + 10)"
	-> "strlen (filename) + 10").

	* commit.c (checkaddfile): Remove arbitrary limit.

Tue Jan  2 11:25:22 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit): Only pass files which were modified, added,
	or removed to send_file_names.  This has as a side effect a
	semantic change--the up-to-date check is now skipped for other
	files--but probably a good one, or at least not a bad one.
	* sanity.sh (basica): New test; tests for bug fixed above.